--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -61,24 +61,26 @@
             <li><a href="#portfolio">Contactos</a></li>
             <!--<li><a href="#team">Team</a></li>-->
             <li class="coisalinda">
-              <input
-                type="button"
-                name="botao-ok"
-                value="Login"
-                style="
-                  background-color: #9dddeb;
-                  border-radius: 10px;
-                  padding: 7px;
-                  font-family: cursive;
-                  cursor: pointer;
-                  position: relative;
-                  color: #132453;
-                  border: 0px;
-                  top: -7px;
-                  left: 10px;
-                  width: 100px;
-                "
-              />
+              <a href="/Frontend/Backoffice/Adaptado/index.html">
+                <input
+                  type="button"
+                  name="botao-ok"
+                  value="Login"
+                  style="
+                    background-color: #9dddeb;
+                    border-radius: 10px;
+                    padding: 7px;
+                    font-family: cursive;
+                    cursor: pointer;
+                    position: relative;
+                    color: #132453;
+                    border: 0px;
+                    top: -7px;
+                    left: 10px;
+                    width: 100px;
+                  "
+                />
+              </a>
             </li>
           </ul>
         </nav>
