--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -59,8 +59,6 @@
             <li><a href="#about">Eventos</a></li>
             <li><a href="#services">Aplicação</a></li>
             <li><a href="#portfolio">Contactos</a></li>
-            <!--<li><a href="#team">Team</a></li>-->
-<<<<<<< HEAD
             <li class="container">
               <center>
                 <button
@@ -85,29 +83,8 @@
                   Login
                 </button>
               </center>
-=======
-            <li class="coisalinda">
-              <a href="/Frontend/Backoffice/Adaptado/index.html">
-                <input
-                  type="button"
-                  name="botao-ok"
-                  value="Login"
-                  style="
-                    background-color: #9dddeb;
-                    border-radius: 10px;
-                    padding: 7px;
-                    font-family: cursive;
-                    cursor: pointer;
-                    position: relative;
-                    color: #132453;
-                    border: 0px;
-                    top: -7px;
-                    left: 10px;
-                    width: 100px;
-                  "
-                />
+            </li>
               </a>
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
             </li>
           </ul>
         </nav>
@@ -159,7 +136,7 @@
             <div
               class="carousel-item active"
               style="
-                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/20.jpg');
+                background-image: url('/bizpage-master/img/intro-carousel/20.jpg');
               "
             >
               <div class="carousel-container">
@@ -173,7 +150,7 @@
             <div
               class="carousel-item"
               style="
-                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/16.jpg');
+                background-image: url('/bizpage-master/img/intro-carousel/16.jpg');
               "
             >
               <div class="carousel-container">
@@ -196,7 +173,7 @@
             <div
               class="carousel-item"
               style="
-                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/17.jpg');
+                background-image: url('/bizpage-master/img/intro-carousel/17.jpg');
               "
             >
               <div class="carousel-container">
@@ -219,7 +196,7 @@
             <div
               class="carousel-item"
               style="
-                background-image: url('/Frontend/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/4.jpg');
+                background-image: url('/bizpage-master/img/intro-carousel/4.jpg');
               "
             >
               <div class="carousel-container">
@@ -315,7 +292,7 @@
               <div class="about-col">
                 <div class="img">
                   <img
-                    src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/about-mission.jpg"
+                    src="/bizpage-master/img/about-mission.jpg"
                     alt=""
                     class="img-fluid"
                   />
@@ -332,7 +309,7 @@
               <div class="about-col">
                 <div class="img">
                   <img
-                    src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/about-plan.jpg"
+                    src="/bizpage-master/img/about-plan.jpg"
                     alt=""
                     class="img-fluid"
                   />
@@ -347,7 +324,7 @@
               <div class="about-col">
                 <div class="img">
                   <img
-                    src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/about-vision.jpg"
+                    src="/bizpage-master/img/about-vision.jpg"
                     alt=""
                     class="img-fluid"
                   />
@@ -405,7 +382,7 @@
           <div class="owl-carousel testimonials-carousel">
             <div class="testimonial-item">
               <img
-                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 8.png"
+                src="/bizpage-master/img/clients/image 8.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -420,15 +397,8 @@
             </div>
 
             <div class="testimonial-item">
-              <img
-<<<<<<< HEAD
-                src="img/clients/image 36.png"
-=======
-                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 36.png"
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
-                class="testimonial-img"
-                alt=""
-              />
+              <img src="img/clients/image 36.png" 
+              class="testimonial-img" alt="" />
               <h3>Eficácia</h3>
               <p>
                 <img class="quote-sign-left" alt="" />
@@ -439,15 +409,10 @@
             </div>
 
             <div class="testimonial-item">
-              <img
-<<<<<<< HEAD
-                src="img/clients/image 37.png"
-=======
-                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 37.png"
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
-                class="testimonial-img"
-                alt=""
-              />
+              <img src="img/clients/image 37.png" 
+              src="/bizpage-master/img/clients/image
+              37.png"
+              class="testimonial-img" alt="" />
               <h3>Eficiência</h3>
               <p>
                 <img class="quote-sign-left" alt="" />
@@ -458,15 +423,10 @@
             </div>
 
             <div class="testimonial-item">
-              <img
-<<<<<<< HEAD
-                src="img/clients/image 38.png"
-=======
-                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 38.png"
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
-                class="testimonial-img"
-                alt=""
-              />
+              <img src="img/clients/image 38.png"
+              src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image
+              38.png"
+              class="testimonial-img" alt="" />
               <h3>Impacto</h3>
               <p>
                 <img class="quote-sign-left" alt="" />
@@ -479,15 +439,10 @@
             </div>
 
             <div class="testimonial-item">
-              <img
-<<<<<<< HEAD
-                src="img/clients/image 39.png"
-=======
-                src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image 39.png"
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
-                class="testimonial-img"
-                alt=""
-              />
+              <img src="img/clients/image 39.png" 
+              src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image
+              39.png"
+              class="testimonial-img" alt="" />
               <h3>Sustentabilidade</h3>
               <p>
                 <img class="quote-sign-left" alt="" />
@@ -512,22 +467,10 @@
       </div>-->
 
       <section id="call-to-action" class="wow fadeIn" style="height: 400px">
-        <img
-<<<<<<< HEAD
-          src="img/clients/Cidade_Amiga.png"
-=======
-          src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/Cidade_Amiga.png"
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
-          alt="CidadeAmiga"
-          style="
-            width: 25%;
-            position: relative;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            top: 150px;
-          "
-        />
+        <img src="img/clients/Cidade_Amiga.png" =======
+        src="/bizpage-master/img/clients/Cidade_Amiga.png" alt="CidadeAmiga"
+        style=" width: 25%; position: relative; display: block; margin-left:
+        auto; margin-right: auto; top: 150px; " />
 
         <!--<img
           src="/img/clients/PlayStore.png"
