--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -10,7 +10,7 @@
     <!-- Favicons -->
     <!--<link href="img/favicon.png" rel="icon" />-->
     <link
-      href="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/apple-touch-icon.png"
+      href="/FrontOffice/bizpage-master/bizpage-master/img/apple-touch-icon.png"
       rel="apple-touch-icon"
     />
 
@@ -136,7 +136,7 @@
             <div
               class="carousel-item active"
               style="
-                background-image: url('/bizpage-master/img/intro-carousel/20.jpg');
+                background-image: url('/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/20.jpg');
               "
             >
               <div class="carousel-container">
@@ -150,7 +150,7 @@
             <div
               class="carousel-item"
               style="
-                background-image: url('/bizpage-master/img/intro-carousel/16.jpg');
+                background-image: url('/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/16.jpg');
               "
             >
               <div class="carousel-container">
@@ -173,7 +173,7 @@
             <div
               class="carousel-item"
               style="
-                background-image: url('/bizpage-master/img/intro-carousel/17.jpg');
+                background-image: url('/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/17.jpg');
               "
             >
               <div class="carousel-container">
@@ -196,7 +196,7 @@
             <div
               class="carousel-item"
               style="
-                background-image: url('/bizpage-master/img/intro-carousel/4.jpg');
+                background-image: url('/FrontOffice/bizpage-master/bizpage-master/img/intro-carousel/4.jpg');
               "
             >
               <div class="carousel-container">
@@ -292,7 +292,7 @@
               <div class="about-col">
                 <div class="img">
                   <img
-                    src="/bizpage-master/img/about-mission.jpg"
+                    src="/FrontOffice/bizpage-master/bizpage-master/img/about-mission.jpg"
                     alt=""
                     class="img-fluid"
                   />
@@ -309,7 +309,7 @@
               <div class="about-col">
                 <div class="img">
                   <img
-                    src="/bizpage-master/img/about-plan.jpg"
+                    src="/FrontOffice/bizpage-master/bizpage-master/img/about-plan.jpg"
                     alt=""
                     class="img-fluid"
                   />
@@ -324,7 +324,7 @@
               <div class="about-col">
                 <div class="img">
                   <img
-                    src="/bizpage-master/img/about-vision.jpg"
+                    src="/FrontOffice/bizpage-master/bizpage-master/img/about-vision.jpg"
                     alt=""
                     class="img-fluid"
                   />
@@ -382,7 +382,7 @@
           <div class="owl-carousel testimonials-carousel">
             <div class="testimonial-item">
               <img
-                src="/bizpage-master/img/clients/image 8.png"
+                src="/FrontOffice/bizpage-master/bizpage-master/img/clients/image 8.png"
                 class="testimonial-img"
                 alt=""
               />
@@ -397,7 +397,7 @@
             </div>
 
             <div class="testimonial-item">
-              <img src="img/clients/image 36.png" 
+              <img src="/FrontOffice/bizpage-master/bizpage-master/img/clients/image 36.png" 
               class="testimonial-img" alt="" />
               <h3>Eficácia</h3>
               <p>
@@ -409,7 +409,7 @@
             </div>
 
             <div class="testimonial-item">
-              <img src="img/clients/image 37.png" 
+              <img src="/FrontOffice/bizpage-master/bizpage-master/img/clients/image 37.png" 
               src="/bizpage-master/img/clients/image
               37.png"
               class="testimonial-img" alt="" />
@@ -423,7 +423,7 @@
             </div>
 
             <div class="testimonial-item">
-              <img src="img/clients/image 38.png"
+              <img src="/FrontOffice/bizpage-master/bizpage-master/img/clients/image 38.png"
               src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image
               38.png"
               class="testimonial-img" alt="" />
@@ -440,8 +440,7 @@
 
             <div class="testimonial-item">
               <img src="img/clients/image 39.png" 
-              src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/image
-              39.png"
+              src="/FrontOffice/bizpage-master/bizpage-master/img/clients/image 39.png"
               class="testimonial-img" alt="" />
               <h3>Sustentabilidade</h3>
               <p>
@@ -468,7 +467,7 @@
 
       <section id="call-to-action" class="wow fadeIn" style="height: 400px">
         <img src="img/clients/Cidade_Amiga.png" =======
-        src="/bizpage-master/img/clients/Cidade_Amiga.png" alt="CidadeAmiga"
+        src="/FrontOffice/bizpage-master/bizpage-master/img/clients/Cidade_Amiga.png" alt="CidadeAmiga"
         style=" width: 25%; position: relative; display: block; margin-left:
         auto; margin-right: auto; top: 150px; " />
 
@@ -516,7 +515,7 @@
                 </p>
               </div>
               <img
-                src="/bizpage-master/img/clients/unicef-icon-4.jpg"
+                src="/FrontOffice/bizpage-master/bizpage-master/img/clients/unicef-icon-4.jpg"
                 alt="unicef"
                 style="position: relative; bottom: 70px; left: 300px"
               />
