--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -453,37 +453,15 @@
         </div>
       </section>
 
-      <!--<div class="container">
-        <img
-          src="/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/85.jpg"
-          alt="together"
-          style="width: 100%"
-        />
-        <div class="text-block2">
-          <h4>Nature</h4>
-          <p>What a beautiful sunrise</p>
-        </div>
-      </div>-->
+
+
 
       <section id="call-to-action" class="wow fadeIn" style="height: 400px">
-        <img src="img/clients/Cidade_Amiga.png" =======
+        <img src="img/clients/Cidade_Amiga.png"
         src="/FrontOffice/bizpage-master/bizpage-master/img/clients/Cidade_Amiga.png" alt="CidadeAmiga"
         style=" width: 25%; position: relative; display: block; margin-left:
         auto; margin-right: auto; top: 150px; " />
 
-        <!--<img
-          src="/img/clients/PlayStore.png"
-          alt="Play_Store"
-          style="
-            width: 25%;
-            position: relative;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            left: 350px;
-            top: 0px;
-          "
-        />-->
 
         <div class="container text-center">
           <h3>Adquire a nossa Aplicação!</h3>
