--- a/Frontend/Backoffice/Adaptado/pages/tables/data.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/data.html
@@ -643,7 +643,12 @@
                 <div class="form-row">
                   <div class="form-group col-md-8">
                     <label for="inputEmail4">Nome da atividade</label>
-                    <input type="text" class="form-control" id="inputEmail4" />
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputEmail4"
+                      readonly
+                    />
                   </div>
                   <div class="form-group col-md-4">
                     <label for="inputPassword4">Local</label>
@@ -651,13 +656,19 @@
                       type="text"
                       class="form-control"
                       id="inputPassword4"
+                      readonly
                     />
                   </div>
                 </div>
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="inputEmail4">Data de inicio</label>
-                    <input type="text" class="form-control" id="inputEmail4" />
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputEmail4"
+                      readonly
+                    />
                   </div>
                   <div class="form-group col-md-6">
                     <label for="inputPassword4">Data de fim</label>
@@ -665,6 +676,7 @@
                       type="text"
                       class="form-control"
                       id="inputPassword4"
+                      readonly
                     />
                   </div>
                 </div>
@@ -675,6 +687,7 @@
                     id="exampleFormControlTextarea1"
                     rows="3"
                     style="resize: none"
+                    readonly
                   ></textarea>
                 </div>
                 <div class="form-group">
@@ -683,6 +696,7 @@
                     multiple
                     class="form-control"
                     id="exampleFormControlSelect2"
+                    aria-readonly="true"
                   >
                     <option></option>
                     <option></option>
