--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -460,30 +460,19 @@
             <h3 class="section-title">Atividades Planeadas</h3>
           </header>
   
-          <div class="row">
-            <div class="col-lg-12">
-              <ul id="portfolio-flters">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-card">Card</li>
-                <li data-filter=".filter-web">Web</li>
-              </ul>
-            </div>
-          </div>
-  
           <div class="row portfolio-container">
   
             <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
+                  <img src="img/portfolio/" class="img-fluid" alt="">
                   <a href="img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">App 1</a></h4>
-                  <p>App</p>
+                  <h4><a href="#">Introdução ao Grafitti</a></h4>
+                  <p>Bom Jesus - 22/05/2021</p>
                 </div>
               </div>
             </div>
@@ -497,8 +486,8 @@
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">Web 3</a></h4>
-                  <p>Web</p>
+                  <h4><a href="#">Atividades Diversas</a></h4>
+                  <p>Parque da Cidade - 29/05/2021</p>
                 </div>
               </div>
             </div>
@@ -512,8 +501,8 @@
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">App 2</a></h4>
-                  <p>App</p>
+                  <h4><a href="#">Corrida de Karts</a></h4>
+                  <p>Kartódromo de Braga - 05/05/2021</p>
                 </div>
               </div>
             </div>
@@ -527,89 +516,12 @@
                 </figure>
   
                 <div class="portfolio-info">
-                  <h4><a href="#">Card 2</a></h4>
-                  <p>Card</p>
+                  <h4><a href="#">Festa de Verão</a></h4>
+                  <p>Parque da Peneda - 26/05/2021</p>
                 </div>
               </div>
             </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">Web 2</a></h4>
-                  <p>Web</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">App 3</a></h4>
-                  <p>App</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">Card 1</a></h4>
-                  <p>Card</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp" data-wow-delay="0.1s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/card3.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">Card 3</a></h4>
-                  <p>Card</p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
-                  <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-  
-                <div class="portfolio-info">
-                  <h4><a href="#">Web 1</a></h4>
-                  <p>Web</p>
-                </div>
-              </div>
-            </div>
-  
           </div>
-  
         </div>
       </section><!-- #portfolio -->
 
