--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -377,7 +377,7 @@
       Clients Section
     ============================-->
       <section id="aplicacao" class="section-bg wow fadeInUp">
-        <div class="container">
+        <div class="container" style="background-color: #9dddeb;">
           <header class="section-header">
             <h3>A Aplicação Cidade Amiga</h3>
           </header>
