--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -720,6 +720,7 @@
                   data-rule="required"
                   data-msg="Por favor, escreva algo para nós"
                   placeholder="Mensagem"
+                  style="resize: none;"
                 ></textarea>
                 <div class="validation"></div>
               </div>
