Algumas ligações e front office

--- a/Frontend/Backoffice/Adaptado/pages/calendar.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar.html
@@ -432,64 +432,78 @@
                       </div>
                       <!-- /btn-group -->
                       <div class="input-group">
-                        <input
-                          id="new-event"
-                          type="text"
-                          class="form-control"
-                          placeholder="Nome da atividade"
-                          required
-                        />
-
-                        <div class="input-group-append">
+                        <form
+                          method="POST"
+                          action="http://161.230.18.89:8080/DAI_backend/register_activity"
+                        >
+                          <div class="form-group">
+                            <input
+                              id="new-event"
+                              name="activity_name"
+                              type="text"
+                              class="form-control"
+                              placeholder="Nome da atividade"
+                              required
+                            />
+                            <br />
+                            <input
+                              id="new-event-cidade"
+                              type="text"
+                              class="form-control"
+                              placeholder="Cidade"
+                              name="activity_city"
+                              required
+                            />
+                            <br />
+                            <input
+                              id="new-event-descricao"
+                              type="text"
+                              class="form-control"
+                              placeholder="Descrição"
+                              name="activity_local"
+                              required
+                            />
+                            <br />
+                            <input
+                              id="new-event-parceiros"
+                              type="text"
+                              class="form-control"
+                              placeholder="Parceiros"
+                              name="id_institution"
+                            />
+                            <br />
+                            <div class="custom-file">
+                              <div class="input-group">
+                                <div class="custom-file">
+                                  <input
+                                    type="file"
+                                    class="custom-file-input"
+                                    id="new-event-imagem"
+                                    name="document"
+                                  />
+                                  <label
+                                    class="custom-file-label"
+                                    for="new-event-imagem"
+                                    >Adicionar imagem</label
+                                  >
+                                </div>
+                                <div class="input-group-append">
+                                  <span class="input-group-text">Carregar</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- /input-group -->
+                          </div>
                           <button
                             id="add-new-event"
-                            type="button"
+                            type="submit"
+                            class="btn btn-primary"
                             class="btn btn-primary"
                           >
                             Criar
                           </button>
-                        </div>
-                        <!-- /btn-group -->
+                        </form>
                       </div>
-                      <br />
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Local"
-                      />
-                      <br />
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Descrição"
-                      />
-                      <br />
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Parceiros"
-                      />
-                      <br />
-                      <div class="custom-file">
-                        <div class="input-group">
-                          <div class="custom-file">
-                            <input
-                              type="file"
-                              class="custom-file-input"
-                              id="exampleInputFile"
-                            />
-                            <label
-                              class="custom-file-label"
-                              for="exampleInputFile"
-                              >Adicionar imagem</label
-                            >
-                          </div>
-                          <div class="input-group-append">
-                            <span class="input-group-text">Carregar</span>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- /input-group -->
                     </div>
                   </div>
                 </div>
@@ -815,7 +829,9 @@
           e.preventDefault();
           // Get value and make sure it is not null
           var val = $("#new-event").val();
-          if (val.length == 0) {
+          var val2 = $("#new-event-cidade").val();
+          var val3 = $("#new-event-descricao").val();
+          if (val.length == 0 && val2.length == 0 && val3.length == 0) {
             return;
           }
 
