--- a/Frontend/Backoffice/Adaptado/pages/tables/data.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/data.html
@@ -359,7 +359,8 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
+                        <!--  
+                          <tr>
                           <td>Palhaçada</td>
                           <td>02/06 - 12/06</td>
                           <td>
@@ -600,6 +601,7 @@
                             </button>
                           </td>
                         </tr>
+                        -->
                       </tbody>
                       <tfoot>
                         <tr>
@@ -752,6 +754,8 @@
     <script src="../../dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../../dist/js/demo.js"></script>
+    <!-- Controllers -->
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_tabelas.js"></script>
     <!-- Page specific script -->
     <script>
       $(function () {
