--- a/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html
@@ -348,7 +348,7 @@
                   <!-- /.card-header -->
                   <div class="card-body">
                     <table
-                      id="example1"
+                      id="tabela-parceiros"
                       class="table table-bordered table-striped"
                     >
                       <thead>
@@ -360,7 +360,9 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
+                        <!-- 
+
+                          <tr>
                           <td>Palhaçada</td>
                           <td>02/06 - 12/06</td>
                           <td>
@@ -603,10 +605,12 @@
                             </button>
                           </td>
                         </tr>
+
+                         -->
                       </tbody>
                       <tfoot>
                         <tr>
-                          <th>Nome atividade</th>
+                          <th>Nome</th>
                           <th>Atividade</th>
                           <th>Proposta</th>
                           <th></th>
@@ -741,10 +745,13 @@
     <script src="../../dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../../dist/js/demo.js"></script>
+
+    <!-- Controllers -->
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_tabelas.js"></script>
     <!-- Page specific script -->
     <script>
       $(function () {
-        $("#example1")
+        $("#tabela-parceiros")
           .DataTable({
             responsive: true,
             lengthChange: false,
@@ -775,7 +782,7 @@
           })
           .buttons()
           .container()
-          .appendTo("#example1_wrapper .col-md-6:eq(0)");
+          .appendTo("#tabela-parceiros_wrapper .col-md-6:eq(0)");
         $("#example2").DataTable({
           paging: true,
           lengthChange: false,
@@ -793,8 +800,8 @@
             body: "A parceria aceite foi adicionada à atividade em questão.",
           });
         });
-        $("#example1").on("click", ".remove", function () {
-          var table = $("#example1").DataTable();
+        $("#tabela-parceiros").on("click", ".remove", function () {
+          var table = $("#tabela-parceiros").DataTable();
           var row = $(this).parents("tr");
 
           if ($(row).hasClass("child")) {
