--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -104,19 +104,25 @@
             </button>
           </div>
           <div class="modal-body">
-            <form action="/Frontend/Backoffice/Adaptado/index.html">
+            <!-- <form action="/Frontend/Backoffice/Adaptado/index.html"> -->
+              <form action ="http://161.230.18.89:8080/DAI_backend/login"  method ="POST" class="form"></form>
               <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" />
+                <input type="email" class="form-control" name="email" placeholder="email" id="email" />
+               <!--  <input type="email" class="form-control" id="email" /> -->
               </div>
               <div class="form-group">
                 <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" />
+               <!--  <input type="password" class="form-control" id="pwd" /> -->
+                <input type="password" class="form-control" name="password" placeholder="Password" id="pwd" />
               </div>
               <div class="checkbox">
                 <label><input type="checkbox" /> Lembrar-me</label>
               </div>
-              <button type="submit" class="btn btn-default">Entrar</button>
+              <!--<a href="http://127.0.0.1:5500/Frontend/Backoffice/Adaptado/index.html" class="btn btn-primary btn-user btn-block">
+                Login
+              </a>-->
+            <button class="btn btn-default" type="submit" id="SumbitLogin" onclick="getCookie()">Entrar</button>
             </form>
           </div>
         </div>
@@ -756,7 +762,8 @@
     <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
     <!-- Contact Form JavaScript File -->
     <script src="contactform/contactform.js"></script>
-
+<!-- Controllers -->
+<script src="/Frontend/Backoffice/Adaptado/controllers/cookie.js"></script>
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
   </body>
