--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -99,6 +99,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
+            <p style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: larger; color:#132453">Bem-Vindo/a</p>
             <button type="button" class="close" data-dismiss="modal">
               &times;
             </button>
@@ -377,7 +378,7 @@
       Clients Section
     ============================-->
       <section id="aplicacao" class="section-bg wow fadeInUp">
-        <div class="container" style="background-color: #9dddeb;">
+        <div class="container" style="background-color:white;">
           <header class="section-header">
             <h3>A Aplicação Cidade Amiga</h3>
           </header>
@@ -582,9 +583,47 @@
               }
               </style>
 
-<button class="button">Candidata-te</button>
+<button class="button" type="button" data-toggle="modal" data-target="#myMod">Candidata-te</button>
+         </div>
 
+          <div id="myMod" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <p style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: larger; color:#132453">Formulário para Parceiros</p>
+                  <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="name">Nome:</label>
+                      <input type="text" class="form-control" id="name" />
+                    </div>
+                    <div class="form-group">
+                      <label for="email">Email:</label>
+                      <input type="email" class="form-control" id="email" />
+                    </div>
+                    <div class="form-group">
+                      <label for="tel">Telefone:</label>
+                      <input type="tel" class="form-control" id="tel" />
+                    </div>
+                    <div class="form-group">
+                      <label for="ativ">Atividade:</label>
+                      <input type="text" class="form-control" id="ativ" />
+                    </div>
+                    <div class="form-group">
+                      <label for="prop">Proposta</label>
+                      <input type="text" class="form-control" id="prop" />
+                    </div>
+                    <button type="submit" class="btn btn-default">Enviar</button>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
+
       </section>
 
       <section id="call-to-action" class="wow fadeIn" style="height: 400px">
