--- a/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
@@ -362,6 +362,75 @@
                   class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch"
                 >
                   <div class="card bg-light">
+                    <div
+                      class="card-header text-muted border-bottom-0"
+                      id="data"
+                    >
+                      *Data de fim?*
+                    </div>
+                    <div class="card-body pt-0">
+                      <div class="row">
+                        <div class="col-7">
+                          <h2 class="lead" id="nome-atividade">
+                            <b>*Nome da atividade?*</b>
+                          </h2>
+                          <p class="text-muted text-sm" id="descricao">
+                            <b>Descrição: </b> Atividade de balões ao ar livre,
+                            free covid, e com palhaços.
+                          </p>
+                          <ul class="ml-4 mb-0 fa-ul text-muted">
+                            <li class="small" id="local">
+                              <span class="fa-li"
+                                ><i class="fas fa-lg fa-building"></i
+                              ></span>
+                              *Local:? Parque da Ponte, Braga*
+                            </li>
+                            <br />
+                            <li class="small">
+                              <span class="fa-li">
+                                <i class="fas fa-medal"></i>
+                              </span>
+                              <style>
+                                .checked {
+                                  color: orange;
+                                }
+                              </style>
+                              <span class="fa fa-star checked"></span>
+                              <span class="fa fa-star checked"></span>
+                              <span class="fa fa-star checked"></span>
+                              <span class="fa fa-star"></span>
+                              <span class="fa fa-star"></span>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="col-5 text-center">
+                          <img
+                            src="../../dist/img/user1-128x128.jpg"
+                            alt="user-avatar"
+                            class="img-circle img-fluid"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- esta div só vai aparecer para as instituições -->
+                    <div class="card-footer">
+                      <div class="text-right" id="botao-historico">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
+                          <i class="fas fa-info-circle"></i> Ver mais
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch"
+                >
+                  <div class="card bg-light">
                     <div class="card-header text-muted border-bottom-0">
                       *Data de fim?*
                     </div>
@@ -956,6 +1025,8 @@
     <script src="../../dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../../dist/js/demo.js"></script>
+    <!-- Controller -->
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_historico.js"></script>
     <!-- bs-custom-file-input -->
     <script src="/Frontend/Backoffice/Adaptado/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
   </body>
