--- a/Frontend/Backoffice/Adaptado/pages/calendar.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar.html
@@ -363,6 +363,15 @@
                             />
                             <br />
                             <input
+                              id="new-event-data"
+                              type="date"
+                              class="form-control"
+                              placeholder="Data"
+                              name="schedule"
+                              required
+                            />
+                            <br />
+                            <input
                               id="new-event-cidade"
                               type="text"
                               class="form-control"
