--- a/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
@@ -293,8 +293,8 @@
           <!-- Default box -->
           <div class="card card-solid">
             <div class="card-body pb-0">
-              <div class="row d-flex align-items-stretch">
-                <div
+              <div id="PostWrapper" class="row d-flex align-items-stretch">
+                <!-- <div
                   class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch"
                 >
                   <div class="card bg-light">
@@ -343,7 +343,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -412,7 +411,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right" id="botao-historico">
                         <a
@@ -467,7 +465,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -522,7 +519,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -577,7 +573,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -632,7 +627,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -687,7 +681,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -742,7 +735,6 @@
                         </div>
                       </div>
                     </div>
-                    <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
                         <a
@@ -756,7 +748,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
