--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -602,26 +602,22 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <form>
+                  <form action ="http://161.230.18.89:8080/DAI_backend/register_partner"  method ="POST" class="form">
                     <div class="form-group">
                       <label for="name">Nome:</label>
-                      <input type="text" class="form-control" id="name" />
+                      <input type="text" class="form-control" name="name_partner" id="name" />
                     </div>
                     <div class="form-group">
                       <label for="email">Email:</label>
-                      <input type="email" class="form-control" id="email" />
+                      <input type="email" class="form-control" name="email_partner" id="email" />
                     </div>
                     <div class="form-group">
                       <label for="tel">Telefone:</label>
-                      <input type="tel" class="form-control" id="tel" />
-                    </div>
-                    <div class="form-group">
-                      <label for="ativ">Atividade:</label>
-                      <input type="text" class="form-control" id="ativ" />
+                      <input type="tel" class="form-control" name="contact_partner" id="tel" />
                     </div>
                     <div class="form-group">
                       <label for="prop">Proposta</label>
-                      <input type="text" class="form-control" id="prop" />
+                      <input type="text" class="form-control" name="proposal_partner" id="prop" />
                     </div>
                     <button type="submit" class="btn btn-default">Enviar</button>
                   </form>
